update: メッセージ設定をenvへ移行

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,17 @@
 TOKEN=""
+
+# メッセージ送るチャンネル
+TARGET_CHANNEL_ID=""
+
+##### リプライ設定 #####
+# リプライするか
+ENABLE_REPLY=false
+# リプライ先メッセージID
+REPLY_TARGET_MESSAGE_ID=""
+
+# 送信するメッセージ
+MESSAGE_CONTENTS="test"
+# 送信する回数
+MESSAGE_COUNT=2
+# TTSつけるか
+ENABLE_TTS=false
