add: reaction システムの追加

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 TOKEN=""
 
-# メッセージ送るチャンネル
+# 動作させるチャンネル
 TARGET_CHANNEL_ID=""
 
 ##### リプライ設定 #####
@@ -9,9 +9,19 @@ ENABLE_REPLY=false
 # リプライ先メッセージID
 REPLY_TARGET_MESSAGE_ID=""
 
-# 送信するメッセージ
+##### 送信するメッセージ #####
 MESSAGE_CONTENTS="test"
 # 送信する回数
 MESSAGE_COUNT=2
 # TTSつけるか
 ENABLE_TTS=false
+
+#//#//#//#//# リアクションツール #//#//#//#//#
+# リアクションのモード "ADD" OR "REMOVE"
+REACTION_MODE="ADD"
+# スーパーリアクションを有効化するか
+ENABLE_SUPER_REACTION=true
+# 絵文字IDを書いたjson
+EMOJI_LIST_FILE="./emojis.json"
+# リアクションをつけるメッセージID
+REACTION_TARGET_MESSAGE_ID=""
