--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-tools",
   "version": "1.1.0",
-  "description": "Discordのメッセージなどのツール",
+  "description": "Discordのメッセージやらで使えるちょっとしたツール",
   "main": "index.js",
   "scripts": {
     "test": "node index.js"
