update: セクション名を追加

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ TOKEN=""
 # 動作させるチャンネル
 TARGET_CHANNEL_ID=""
 
+#//#//#//#//# メッセージ送信ツール #//#//#//#//#
 ##### リプライ設定 #####
 # リプライするか
 ENABLE_REPLY=false
